--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href={{asset('assets/css/bootstrap.min.css')}} rel="stylesheet">
+    <link href={{asset('assets/css/style.css')}} rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -32,22 +33,45 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Carousel</a>
+    <nav class="navbar-default navbar-expand-md navbar-dark fixed-top">
+        <img src={{asset('images/imagesUpload/logo/Logo_fete_un_voeu.png')}} alt="Logo fête un voeu" width="100"><a class="navbar-brand" href="/prisca">Fêtes un voeu</a></img>
+        <br>
+        <a class="navbar-brand ml-5" href="">...au service de vos festivités</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
+        <hr>
+        <div class="">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav w-50 mx-auto justify-content-around p-2" style="background-color: #eee;">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
                 </li>
-              
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">A propos<span class="sr-only">(current)</span></a>
+                </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#">Nos prestations<span class="sr-only">(current)</span></a>
+                </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#">Galerie<span class="sr-only">(current)</span></a>
+                </li>
+                </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#">Avis<span class="sr-only">(current)</span></a>
+                </li>
+                 </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+                </li>
+                 </li>
+                   <li class="nav-item active">
+                    <a class="nav-link" href="#">Réservation<span class="sr-only">(current)</span></a>
+                </li>
+
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+           
+        </div>
         </div>
     </nav>
 </header>
