--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -43,7 +43,7 @@
         <hr>
         <div class="">
             <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav w-50 mx-auto justify-content-around p-2" style="background-color: #eee;">
+            <ul class="navbar-nav w-50 mx-auto justify-content-around p-2" style="background-color:">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
                 </li>
