--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -24,15 +24,20 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-    height: 32rem;
+   
+    height: 100vh;
+    width: 100vh;
+    
 }
 .carousel-item > img {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 60%;
     min-width: 100%;
-    height: 32rem;
+    height: auto;
 }
+
+
 
 
 /* MARKETING CONTENT
