--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -88,15 +88,15 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0006.JPG')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
+                <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
                 
             </div>
             <div class="carousel-item">
-             <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0006.JPG')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
+             <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0025.JPG')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
                     
             </div>
             <div class="carousel-item">
-            <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0006.JPG')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
+            <img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0013.JPG')}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto" ></img>
                    
             </div>
         </div>
