--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -110,6 +110,16 @@
         </a>
     </div>
 
+<div class="w-70 text-center mt-4">
+<h1>Le concept de “Fêtes un voeu”</h1>
+<br>
+<p>L'anniversaire de votre bambin arrive ?<br>
+Une fête de famille ?<br>
+Ou tout simplement envie de déguster un bon gâteau fait maison ?<br>
+Demandez-nous !<br>
+Fêtes un voeu, au service de vos festivités ! </p>
+</div>
+<br>
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -123,9 +133,9 @@
     </div><!-- /.container -->
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container mt-5">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2021 Fêtes un voeu &middot; <a href="#">Protection des données</a> &middot; </p>
     </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
