--- a/templates/laurence/modif_pack.html.twig
+++ b/templates/laurence/modif_pack.html.twig
@@ -1,10 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="container">
 
+
+        <h1>Ajout Pack</h1>
+
+
+        {% for message in app.flashes('success') %}
+            <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+
+        {{ form_start(formModifPack) }}
+
+        {{ form_row(formModifPack.nom) }}
+        {{ form_row(formModifPack.description1) }}
+        {{ form_row(formModifPack.description2) }}
+        {{ form_row(formModifPack.prix) }}
+        {{ form_row(formModifPack.image1File) }}
+        {{ form_row(formModifPack.image2File) }}
+        {{ form_row(formModifPack.image3File) }}
+
+
+        <button class="btn btn-outline-primary mb-5" type="submit">Ajouter</button>
+
+
+
+        {{ form_end(formModifPack) }}
+    </div>
 {% endblock %}
 
 {% block title %}
-
+    Lo | Modif_pack
 {% endblock %}
-
