--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<h2 class="text-center bg-light mt-5">NOS PRESTATIONS</h2>
+	<h2 class="text-center bg-light mt-5">Nos prestations</h2>
 
 	<!-- div card packs -->
 	<div class="packsCards">
@@ -103,23 +103,23 @@
 					</div>
 					<div class="col-xs-3">
 						<a href="images/image2.jpg" class="thumbnail ">
-						<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 2"/>
+							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 2"/>
 						</a>
 					</div>
 					<div class="col-xs-3">
 						<a href="images/image3.jpg" class="thumbnail">
-						<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 3"/>
+							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 3"/>
 						</a>
 					</div>
 				</div>
 			</div>
-            <br>
+			<br>
 
 			<div class="d-flex justify-content-center">
 				<div class="row">
 					<div class="col-xs-3">
 						<a href="images/image1.jpg" class="thumbnail">
-						<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 1"/>
+							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 1"/>
 						</a>
 					</div>
 					<div class="col-xs-3">
@@ -134,64 +134,56 @@
 					</div>
 				</div>
 			</div>
-			</div>
 		</div>
+	</div>
 
 
-		<!-- AVIS -->
-		<div class="container mt-5">
-			<div>
-				<h2 class="text-center bg-light">AVIS</h2>
-			</div>
-			<div class="row mt-5">
-
-				<div class="col-lg-4">
-
-					<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-						<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</img>
-					<h2>Pack anniversaire enfants</h2>
-					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-					<p>
-						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-					</p>
-				</div>
-				<!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-						<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</img>
-					<h2>Heading</h2>
-					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-					<p>
-						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-					</p>
-				</div>
-				<!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-						<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-					</img>
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-					<p>
-						<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-					</p>
-				</div>
-				<!-- /.col-lg-4 -->
-			</div>
-			<!-- /.row -->
+	<!-- AVIS -->
+	<div class="container mt-5">
+		<div>
+			<h2 class="text-center bg-light">AVIS</h2>
 		</div>
+		<div class="row mt-5">
 
+			<div class="col-lg-4">
 
-		<!-- CONTACT -->
-
-		<div class="container mt-5">
-			<div>
-				<h2 class="text-center bg-light">GALERIE</h2>
+				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/fem.jpeg')}}  preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				</img>
+				<h2>Olivia P. :</h2>
+				<p>
+Bonjour bonjour!
+Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
+Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+								</p>
 			</div>
-
-
+			<!-- /.col-lg-4 -->
+			<div class="col-lg-4">
+				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/hom.png')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				</img>
+				<h2>Eric M. :</h2>
+					<p>
+Salut !
+Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
+Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+								</p>
+			</div>
+			<!-- /.col-lg-4 -->
+			<div class="col-lg-4">
+				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				</img>
+				<h2>Faby B.</h2>
+					<p>
+Hi !
+Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
+Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+								</p>
+			</div>
+			<!-- /.col-lg-4 -->
 		</div>
+		<!-- /.row -->
+	</div>
 
-	{% endblock %}
+{% endblock %}
