--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -76,7 +76,7 @@
 				</li>
 
 					<li class="nav-item active">
-					<a href="{{asset('profil.html.twig')}}"><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
+					<a href="{{path('profil')}}"><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
 					</img>
 					
 			</ul>
