--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -92,7 +92,7 @@
 
 		<div class="container mt-5">
 			<div>
-				<h2 class="text-center bg-light">GALERIE</h2>
+				<h2 class="text-center bg-light">Galerie</h2>
 			</div>
 			<div class="d-flex justify-content-center">
 				<div class="row">
@@ -141,7 +141,7 @@
 	<!-- AVIS -->
 	<div class="container mt-5">
 		<div>
-			<h2 class="text-center bg-light">AVIS</h2>
+			<h2 class="text-center bg-light">Avis</h2>
 		</div>
 		<div class="row mt-5">
 
