--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,9 @@
                 <li class="nav-item active mr-4">
                     <a class="nav-link text-white" href="{{ path('ajout_resa')}}">ajout reservation</a>
                 </li>
+                <li class="nav-item active mr-4">
+                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">verif dispo</a>
+                </li>
 
             </ul>
             {% if app.user %}
